// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolve type > runtime emits > basic 1`] = `
"import { type SetupContext, defineComponent } from 'vue';
const Comp = defineComponent((props, {
  emit
}: SetupContext<{
  change(val: string): void;
  click(): void;
}>) => {
  emit('change');
  return () => {};
}, {
  emits: [\\"change\\", \\"click\\"]
});"
`;

exports[`resolve type > runtime props > basic 1`] = `
"import { defineComponent, h } from 'vue';
interface Props {
  msg: string;
  optional?: boolean;
}
interface Props2 {
  set: Set<string>;
}
defineComponent((props: Props & Props2) => {
  return () => h('div', props.msg);
}, {
  props: {
    msg: {
      type: String,
      required: true
    },
    optional: {
      type: Boolean,
      required: false
    },
    set: {
      type: Set,
      required: true
    }
  }
});"
`;

exports[`resolve type > runtime props > with dynamic default value 1`] = `
"import { _mergeDefaults } from \\"vue\\";
import { defineComponent, h } from 'vue';
const defaults = {};
defineComponent((props: {
  msg?: string;
} = defaults) => {
  return () => h('div', props.msg);
}, {
  props: _mergeDefaults({
    msg: {
      type: String,
      required: false
    }
  }, defaults)
});"
`;

exports[`resolve type > runtime props > with static default value 1`] = `
"import { defineComponent, h } from 'vue';
defineComponent((props: {
  msg?: string;
} = {
  msg: 'hello'
}) => {
  return () => h('div', props.msg);
}, {
  props: {
    msg: {
      type: String,
      required: false,
      default: 'hello'
    }
  }
});"
`;

exports[`resolve type > w/ tsx 1`] = `
"import { type SetupContext, defineComponent } from 'vue';
const Comp = defineComponent(() => {
  return () => <div />;
}, {});"
`;
